Docs: Add instructional text to Calendar/Gantt views

--- a/index.html
+++ b/index.html
@@ -352,6 +352,7 @@
 
             <div id="calendar-view" class="view-content hidden p-6 bg-gray-50">
                 <h2 class="text-xl md:text-2xl font-semibold mb-4 text-center text-indigo-700">April 2025 - Trip Overview</h2>
+                <p class="text-sm text-gray-600 text-center mb-4">Tap or click on a phase below to see detailed advice.</p>
                 <div id="calendar-grid-container" class="mb-4">
                     </div>
                  <div id="calendar-legend" class="text-xs space-y-1 border-t pt-3 mt-3">
@@ -361,6 +362,7 @@
 
             <div id="gantt-view" class="view-content hidden p-6 bg-gray-50">
                  <h2 class="text-xl md:text-2xl font-semibold mb-4 text-center text-indigo-700">Trip Phases - Gantt View</h2>
+                 <p class="text-sm text-gray-600 text-center mb-4">Tap or click on a phase bar below to see detailed advice.</p>
                  <div id="gantt-chart-container" class="mb-4">
                      </div>
                  <div id="gantt-legend" class="text-xs space-y-1 border-t pt-3 mt-3">
